--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@tillathe/blog",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,7 +11,7 @@
     "deploy": "npm run build && echo 'need deploy script'"
   },
   "devDependencies": {
-    "astro": "^0.23.0",
+    "astro": "^0.23.7",
     "date-fns": "^2.28.0",
     "prism-themes": "^1.9.0",
     "reading-time": "^1.5.0",
