--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "astro": "^0.23.7",
+    "daisyui": "^2.6.4",
     "date-fns": "^2.28.0",
     "prism-themes": "^1.9.0",
     "reading-time": "^1.5.0",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "theme-change": "^2.0.2"
   }
 }
