--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "deploy": "npm run build && echo 'need deploy script'"
+    "preview": "astro preview"
   },
   "devDependencies": {
     "astro": "^0.23.7",
