--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.28.0",
     "prism-themes": "^1.9.0",
     "reading-time": "^1.5.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.0.23",
     "theme-change": "^2.0.2"
   }
