--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.23.7",
-    "daisyui": "^2.6.4",
+    "astro": "^0.25.4",
+    "daisyui": "^2.13.4",
     "date-fns": "^2.28.0",
     "prism-themes": "^1.9.0",
     "reading-time": "^1.5.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.0.23",
-    "theme-change": "^2.0.2"
+    "theme-change": "^2.0.2",
+    "vite": "^2.8.6"
   }
 }
