--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.25.4",
-    "daisyui": "^2.13.4",
+    "@astrojs/sitemap": "^0.1.0",
+    "@astrojs/tailwind": "^0.2.1",
+    "astro": "1.0.0-beta.19",
+    "daisyui": "^2.14.2",
     "date-fns": "^2.28.0",
     "prism-themes": "^1.9.0",
     "reading-time": "^1.5.0",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "theme-change": "^2.0.2",
-    "vite": "^2.8.6"
+    "vite": "^2.9.6"
   }
 }
